# improved-succotash

./: .env.example  .gitignore  404.html  Dockerfile  README.md  a  b  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
apps/posts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
docs/: index.md
search/: search_index.json
website/: settings.py  urls.py
